# WhaleCode

./: .gitignore  AGENTS.md  Cargo.toml  README.md
archive/deprecated/2026-04-27-rust-demo/: README.md
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-cli/: Cargo.toml
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-cli/src/: interactive.rs  line_input.rs  main.rs  session_view.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-core/: Cargo.toml
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-core/src/: command_tool.rs  lib.rs  live.rs  recorder.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-core/tests/: agent_loop.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-model/: Cargo.toml
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-model/src/: lib.rs  tool_calls.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-model/tests/: deepseek_adapter.rs  tool_calls.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-patch/: Cargo.toml
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-patch/src/: lib.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-permission/: Cargo.toml
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-permission/tests/: decision.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-primitives/src/: lib.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-protocol/src/: artifact.rs  lib.rs  workflow.rs
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-session/: Cargo.toml
archive/deprecated/2026-04-27-rust-demo/crates/whalecode-tools/tests/: output_truncation.rs  read_search.rs
archive/deprecated/2026-04-27-rust-demo/scripts/: test-after-change.sh
coe/: 2026-04-30-01-52 first-turn-startup-lag.md
crates/whalecode-cli/: Cargo.toml
crates/whalecode-cli/src/: interactive.rs  line_input.rs  main.rs  run_status.rs  session_view.rs
crates/whalecode-cli/tests/: live_status.rs  run.rs
crates/whalecode-context/: Cargo.toml
crates/whalecode-context/src/: lib.rs
crates/whalecode-core/: Cargo.toml
crates/whalecode-core/src/: interaction_router.rs  lib.rs  live.rs  live_tool_args.rs  live_tool_defs.rs  live_tools.rs  recorder.rs  tool_log.rs
crates/whalecode-model/: Cargo.toml
crates/whalecode-model/src/: bootstrap.rs  lib.rs  secrets.rs  tool_calls.rs
crates/whalecode-model/tests/: deepseek_adapter.rs
crates/whalecode-patch/: Cargo.toml
crates/whalecode-patch/src/: lib.rs
crates/whalecode-patch/tests/: patch_artifact.rs
crates/whalecode-permission/: Cargo.toml
crates/whalecode-permission/src/: lib.rs
crates/whalecode-permission/tests/: decision.rs
crates/whalecode-primitives/: Cargo.toml
crates/whalecode-protocol/: Cargo.toml
crates/whalecode-protocol/src/: event.rs  id.rs  lib.rs  primitive.rs  tool.rs
crates/whalecode-protocol/tests/: event_schema.rs
crates/whalecode-session/: Cargo.toml
crates/whalecode-session/src/: lib.rs
crates/whalecode-session/tests/: jsonl_store.rs
crates/whalecode-tools/: Cargo.toml
crates/whalecode-tools/src/: lib.rs
docs/adr/: 2026-04-25-rust-first-core-runtime.md  2026-04-27-codex-cli-upstream-substrate.md
docs/migration/: README.md
docs/migration/codex-sync/: 2026-04-27-deepseek-default-model-fix.md  2026-04-27-initial-import.md  2026-04-27-whale-brand-deepseek.md  2026-04-27-windows-local-bringup.md  2026-04-28-deepseek-official-thinking-effort.md  2026-05-01-selective-upstream-backports.md  README.md
docs/plans/: 2026-04-24-system-architecture.md  2026-04-25-codex-first-reference-audit.md  2026-04-25-differentiated-primitives-architecture.md  2026-04-25-multi-agent-collaboration-architecture.md  2026-04-25-rust-first-technology-architecture.md  2026-04-25-v1-generic-agent-cli-implementation-plan.md  2026-04-27-codex-cli-upstream-substrate-migration-plan.md  2026-04-28-web-search-provider-reference-scan.md  2026-04-29-dynamic-web-tool-manifest-plan.md  2026-04-29-multi-agent-behavior-kernel-design.md  2026-04-29-search-provider-routing-strategy.md  2026-04-29-web-search-tools-implementation-plan.md  2026-04-30-action-map-runtime-design.md  2026-04-30-deepseek-compact-primitive-design.md  2026-05-01-ability-workflow-architecture-design.md  2026-05-01-action-map-runtime-engineering-design.md  AGENTS.md
docs/runbooks/: cross-system-restore.md  development-workflow.md  npm-publishing.md  rust-development-environment.md  search-provider-setup.md  windows-development-restore.md
docs/testing/: 2026-04-27-after-change-smoke-regression-strategy.md
patches/codex-cli/: README.md
scripts/: check-build-profile-policy.ps1  check-cli-isolation.ps1  check-codex-collision-risk.ps1  install-whale-local.ps1
