[workspace]
members = [
  "crates/whalecode-protocol",
  "crates/whalecode-core",
  "crates/whalecode-model",
  "crates/whalecode-tools",
  "crates/whalecode-permission",
  "crates/whalecode-patch",
  "crates/whalecode-session",
  "crates/whalecode-context",
  "crates/whalecode-primitives",
  "crates/whalecode-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ceasarXuu/WhaleCode"
authors = ["WhaleCode Contributors"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
