[package]
name = "whalecode-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "whale"

[[bin]]
name = "whale"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rpassword.workspace = true
thiserror.workspace = true
tokio.workspace = true
whalecode-core = { path = "../whalecode-core" }
whalecode-model = { path = "../whalecode-model" }

[dev-dependencies]
tempfile.workspace = true
