[package]
name = "whalecode-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
whalecode-model = { path = "../whalecode-model" }
whalecode-patch = { path = "../whalecode-patch" }
whalecode-permission = { path = "../whalecode-permission" }
whalecode-protocol = { path = "../whalecode-protocol" }
whalecode-session = { path = "../whalecode-session" }
whalecode-tools = { path = "../whalecode-tools" }

[dev-dependencies]
tempfile.workspace = true
