[package]
name = "whalecode-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ignore.workspace = true
serde.workspace = true
thiserror.workspace = true
whalecode-protocol = { path = "../whalecode-protocol" }

[dev-dependencies]
tempfile.workspace = true
