[package]
name = "whalecode-permission"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
whalecode-protocol = { path = "../whalecode-protocol" }

[dev-dependencies]
tempfile.workspace = true
